make logger a singleton
